# agewell-mvp

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
configs/: default.yaml
configs/agent/: default.yaml
configs/data/: default.yaml  kaggle_only.yaml
configs/model/: default.yaml
configs/pipeline/: default.yaml
configs/rl/: default.yaml
configs/training/: default.yaml  phase5_student.yaml  phase5_teacher.yaml
data/: master.parquet.dvc  quality_report.json
data/splits/: calib.parquet.dvc  test.parquet.dvc  train.parquet.dvc
docker/bids_validator/: Dockerfile
docker/brainiac/: Dockerfile
docker/brainiac_preprocess/: Dockerfile
docker/dcm2niix/: Dockerfile
docker/inference/: Dockerfile
docker/mlflow/: Dockerfile
docker/postgres/: init.sql
docker/qc/: Dockerfile
docs/: data_profile.html
docs/runbooks/: 00_first_boot.md  10_reproducible_cloud_handoff.md
models/: MODEL_CARD.md  brainiac-v1-simclr.pt.dvc
models/brainiac/atlases/: nihpd_asym_13.0-18.5_t1w.nii.dvc
models/brainiac/hdbet/: 0.model.dvc
models/licenses/: brainiac.txt
scripts/: bootstrap.sh  create_runtime_bundle.sh  hydrate_runtime.sh  modal_train_h200_16ep_b64.sh  seed_minio.sh  seed_postgres.sh  setup_fresh_machine.sh  verify_runtime.sh  wait_for_services.sh
src/agewell/: __init__.py  config.py  healthcheck.py  logging.py  service.py
src/agewell/_common/: __init__.py  ids.py  otel.py  paths.py
src/agewell/data/: __init__.py  cognitive_columns.py  comorbid_columns.py  freesurfer_columns.py  freesurfer_columns_canonical.txt  label_harmonization.py  lipid_panel_columns.py  master.py  registry.py  schema.py  split_sync.py  splits.py
src/agewell/ml/: __init__.py  calibration.py  config_utils.py  datamodule.py  feature_extractors.py  heads.py  lightning_module.py  losses.py  metrics.py  modality_dropout.py  modality_registry.py  model.py  permod_moe.py  projections.py  transformer.py
src/agewell/modal_apps/: __init__.py  _runtime_patches.py  phase5_eval.py
src/agewell/pipelines/: imaging_flow.py
src/agewell/scripts/: __init__.py  _ml_smoke.py  _phase5_common.py  build_master.py  calibrate.py  data_gates.py  eda.py  evaluate.py  run_imaging.py  split.py  (+4 more)
tests/: conftest.py
tests/integration/: test_services_up.py
tests/unit/: test_adapters.py  test_brainiac_model.py  test_brainiac_preprocess.py  test_freesurfer_columns.py  test_imaging_flow.py  test_imaging_qc.py  test_label_harmonization.py  test_phase3_encoders.py  test_phase3_feature_extractors.py  test_phase3_modality_registry.py  test_phase3_tabpfn_real_smoke.py  test_phase4_core.py  test_phase4_model_datamodule.py  test_phase5_metrics_calibration.py  test_phase5_split_sync.py  test_schema.py  test_service_tracing.py  test_smoke.py  test_splits.py
(+41 files in other folders)
