[project]
name = "agewell"
version = "0.1.0"
description = "AgeWell-IN sparse-modality multimodal brain-aging research platform"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115,<0.120",
  "hydra-core>=1.3,<2",
  "omegaconf>=2.3,<3",
  "opentelemetry-api>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-sdk>=1.27",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.4,<3",
  "python-json-logger>=2.0",
  "structlog>=24.1",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
mvp = [
  "agno>=2.1",
  "alembic>=1.13",
  "anthropic>=0.39",
  "antspyx>=0.4",
  "captum>=0.7",
  "dvc[s3]>=3.55",
  "duckdb>=1.0",
  "httpx>=0.27",
  "lightning>=2.4",
  "mapie>=0.9",
  "minio>=7.2",
  "mlflow>=2.16",
  "monai>=1.3",
  "nibabel>=5.2",
  "numpy>=1.26,<2.2",
  "openai>=1.50",
  "opentelemetry-exporter-otlp>=1.27",
  "pandas>=2.2",
  "plotly>=5.24",
  "polars>=1.5",
  "prefect>=3.0",
  "psycopg[binary]>=3.2",
  "pyarrow>=17",
  "redis>=5.0",
  "scikit-learn>=1.5",
  "scikit-image>=0.21",
  "scipy>=1.13",
  "SimpleITK>=2.4",
  "sqlalchemy>=2.0",
  "streamlit>=1.38",
  "tabpfn>=7.1,<8",
  "tenacity>=8.5",
  "timm>=1.0",
  "torch>=2.4",
  "torchio>=0.19",
  "torchmetrics>=1.4",
  "torchvision>=0.19",
  "transformers>=4.45",
  "verifiers>=0.1.14,<0.2",
  "ydata-profiling>=4.18,<5",
]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "modal>=1.1,<2",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "psycopg[binary]>=3.2",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.6",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agewell"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/agewell/vendor/HD_BET"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "D"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
packages = ["agewell"]
exclude = ["src/agewell/vendor/HD_BET"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
  "hydra.*",
  "modal.*",
  "monai.*",
  "nibabel.*",
  "omegaconf.*",
  "opentelemetry.*",
  "pandas.*",
  "prefect.*",
  "pythonjsonlogger.*",
  "SimpleITK.*",
  "sklearn.*",
  "structlog.*",
  "tabpfn.*",
  "ydata_profiling.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
  "integration: hits running backing services",
  "gpu: requires CUDA",
  "slow: > 30s; off by default",
]
